--- a/HTML-Skeleton-Project.html
+++ b/HTML-Skeleton-Project.html
@@ -21,6 +21,13 @@
             applications
         </span>
         <br>
+        <span>Before continuing you can use the following links to get the hell outta here</span>
+        <br>
+            <a href="https://www.google.com.pk" target="_blank">Google</a>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        <br>
+        <br>
         <span>Please make sure that your are filling out the correct information as we won't be responsible for any
             error in applications</span>
     </div>
